@@ -17,6 +17,14 @@
 
 2012-11-28  Sam Weinig  <sam@webkit.org>
 
+        Fix 32bit build.
+
+        * Shared/mac/ObjCObjectGraphCoders.mm:
+        (WebKit::WebContextObjCObjectGraphDecoderImpl::decode):
+        (WebKit::InjectedBundleObjCObjectGraphDecoderImpl::decode):
+
+2012-11-28  Sam Weinig  <sam@webkit.org>
+
         Add an objc object graph wrapper and coder for WKConnection message bodies
         https://bugs.webkit.org/show_bug.cgi?id=103589
 
